# text-sub

./: .gitignore  Cargo.toml  README.md  TODO.md  draft-menu-ship-builder.md  draft-menu-ship-builder.txt  feature_list.md
.cargo/: config.toml
.github/workflows/: rust.yml
client/: Cargo.toml  components.rs  constants.rs  draft-menu-ship-builder.txt  enums.rs  events.rs  game_state.rs  implementations.rs  input.rs  lib.rs  main.rs  mainmenu.rs  parts.rs  plugin.rs  resources.rs  start.rs  structs.rs  systems.rs  world.rs
client/.cargo/: config.toml
client/assets/: Cargo.toml
client/systems/: menus.rs  mod.rs  movement.rs  multiplayer.rs  sync_ships.rs  torpedos.rs  ui.rs  utils.rs
server/: Cargo.toml
src/: components.rs  constants.rs  events.rs  lib.rs  macros.rs  main.rs  plugin.rs  systems.rs
src/client/: events.rs
