[package]
name = "textsub"
version = "0.1.0"
edition = "2021"
authors = ["doublecouponday <mail@samueljenks.me>", "bobscorn <qwertster0@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = [] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wee_alloc = { version = "0.4.5", optional = true } #enables smaller builds at the cost of runtime allocation time
bevy_ggrs = { version = "0.13", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
bevy_asset_loader = "0.17"
bevy_pkv = "0.8.0"
serde = "1.0.188"
serde_json = "1.0"
bevy-inspector-egui = "0.19"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

#dont optimise runtime performance in dev mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 0

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release.package."*"]
opt-level = 3

[[bin]]
name = "textsub"
path = "main.rs"

[lib]
name = "textsub_lib"
crate-type = ["cdylib", "rlib"]
path = "lib.rs"
