[package]
name = "textsub"
version = "0.1.0"
edition = "2021"
authors = ["doublecouponday <mail@samueljenks.me>", "bobscorn <qwertster0@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = [] }
bevy-inspector-egui = "0.18.3"
bevycheck = "0.5.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wee_alloc = { version = "0.4.5", optional = true } #enables smaller builds at the cost of runtime allocation time
rocket = "=0.5.0-rc.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]
